--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.1.4",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
