--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "firebase": "^10.6.0",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "localforage": "^1.10.0",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0"
   },
