--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "mongodb": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.3",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
