--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.4",
     "@mui/icons-material": "^5.14.18",
+    "@mui/joy": "^5.0.0-beta.16",
     "@mui/material": "^5.14.18",
+    "@table-library/react-table-library": "^4.1.7",
     "@tanstack/react-query": "^5.8.9",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
